# flask-demo

./: .gitignore  Dockerfile  requirements.txt  server.py
lib/blpapi_cpp_3.14.3.1/Linux/: ConnectionAndAuthExample_32  ConnectionAndAuthExample_64  ContributionsMktdataExample_32  ContributionsMktdataExample_64  ContributionsPageExample_32  ContributionsPageExample_64  CorrelationExample_32  CorrelationExample_64  EntitlementsVerificationExample_32  EntitlementsVerificationExample_64  EntitlementsVerificationSubscriptionExample_32  EntitlementsVerificationSubscriptionExample_64  EntitlementsVerificationSubscriptionTokenExample_32  EntitlementsVerificationSubscriptionTokenExample_64  EntitlementsVerificationTokenExample_32  EntitlementsVerificationTokenExample_64  GenerateTokenExample_32  GenerateTokenExample_64  GenerateTokenSubscriptionExample_32  GenerateTokenSubscriptionExample_64  IntradayBarExample_32  IntradayBarExample_64  (+52 more)
lib/blpapi_cpp_3.14.3.1/examples/testing/MarketDataNotifier/src/: CMakeLists.txt  appconfig.cpp  appconfig.h  application.cpp  application.h  authorizer.cpp  authorizer.h  computeengine.h  eventprocessor.cpp  eventprocessor.h  main.cpp  notifier.h  subscriber.cpp  subscriber.h  tokengenerator.cpp  tokengenerator.h
lib/blpapi_cpp_3.14.3.1/examples/testing/MarketDataNotifier/tests/: CMakeLists.txt  application.t.cpp  authorizer.t.cpp  eventprocessor.t.cpp  messageTypes.h  mockSession.h  testSchemas.cpp  tokengenerator.t.cpp
templates/: index.html  results.html
trades/: common_trades.py  credentials.py  odbc.py  run.py  security_prices.py
(+380 files in other folders)
